# csci5229hw

./: README.md
hw0/: submission.txt
hw1/: README.txt  gears  hw1.txt
hw2/: Makefile  README  hw2  hw2.c  lorenz.c
hw3/: CMakeCache.txt  CMakeLists.txt  CSCIx229.h  Circle.cpp  FerrisWheel.cpp  Makefile  Mug.cpp  README.md  RectangularPrism.cpp  Ring.cpp  hw3  hw3.c  hw3.cbp  tree.cpp
hw3/scratch/: House.cpp
hw3_make/: Circle.h  Cylinder.cpp  README.md  RectangularPrism.h  Ring.h  hw3  makefile
hw3new/: Brush.cpp  Brush.h  CSCIx229.h  Circle.cpp  Circle.h  Cylinder.cpp  Cylinder.h  House.cpp  House.h  Matrix3D.cpp  Matrix3D.h  RectangularPrism.cpp  RectangularPrism.h  Vector3D.cpp
hw4/: Definitions.h  FerrisWheel.cpp  FerrisWheel.h  Makefile  Mug.cpp  Mug.h  README.md  Ring.cpp  cmake_install.cmake  hw4  hw4.cpp  main.cpp
hw4/scratch/: Brush.cpp  House.h  Vector3D.cpp  Vector3D.h
hw5/: Ball.cpp  Ball.h  Circle.cpp  Cylinder.cpp  FerrisWheel.cpp  Makefile  Mug.cpp  Mug.h  README.md  RectangularPrism.cpp  RectangularPrism.h  Ring.cpp  hw5  hw5.cpp
hw6/: Ball.cpp  Circle.cpp  Cylinder.cpp  Cylinder.h  Definitions.h  Error.cpp  FerrisWheel.cpp  FerrisWheel.h  Makefile  Mug.cpp  Mug.h  README.md  RectangularPrism.cpp  RectangularPrism.h  Ring.cpp  TextureLoader.cpp  TextureLoader.h  hw6  hw6.cpp
